@@ -4,7 +4,7 @@ import com.kertas_kerja.data_kinerja.security.CustomBasicAuthenticationEntryPoin
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpMethod; // ⚠️ JANGAN LUPA IMPORT INI
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -21,7 +21,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -36,21 +35,13 @@ public class SecurityConfig {
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         return http
                 .csrf(AbstractHttpConfigurer::disable)
-                // 🔥 PENTING: CORS harus diaktifkan SEBELUM authorize
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
-                        // 1. ✅ Allow semua OPTIONS request (preflight)
+                        // 🔥 TAMBAHAN PENTING: Izinkan semua request OPTIONS (Preflight)
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-                        // 2. ✅ Public endpoints (TANPA AUTH)
                         .requestMatchers("/actuator/health", "/public/**").permitAll()
-                        .requestMatchers("/auth/**").permitAll()
-                        .requestMatchers("/jenisdata/**").permitAll()
-                        .requestMatchers("/jenisdataopd/**").permitAll()
-                        .requestMatchers("/datakinerjapemda/**").permitAll()
-                        .requestMatchers("/datakinerjaopd/**").permitAll()
-
-                        // 3. Protected endpoints (PERLU AUTH)
+                        .requestMatchers("/auth/**", "/pohon-kinerja/**", "/indikator/**", "/target/**").permitAll()
                         .requestMatchers("/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").authenticated()
                         .anyRequest().authenticated()
                 )
@@ -66,34 +57,19 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // 🔥 CRITICAL: Allowed Origins
-        configuration.setAllowedOriginPatterns(List.of("*")); // Untuk development
-        // Untuk production, ganti dengan:
-        // configuration.setAllowedOrigins(Arrays.asList(
-        //     "http://localhost:3000",
-        //     "https://your-frontend.zeabur.app"
-        // ));
-
-        // 🔥 CRITICAL: Allowed Methods
-        configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
+        // Pastikan URL frontend benar-benar http (bukan https) di localhost
+        configuration.setAllowedOrigins(List.of(
+                "http://localhost:3000",
+                "http://192.168.1.38:3000",
+                "https://kta-service.zeabur.app"
         ));
 
-        // 🔥 CRITICAL: Allowed Headers (semua header diizinkan)
+        // 🔥 Saran: Tambahkan PATCH jika ada kemungkinan dipakai
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+
         configuration.setAllowedHeaders(List.of("*"));
-
-        // 🔥 CRITICAL: Expose Headers (agar frontend bisa baca)
-        configuration.setExposedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "X-Session-Id"
-        ));
-
-        // 🔥 CRITICAL: Allow Credentials
+        configuration.setExposedHeaders(List.of("Authorization"));
         configuration.setAllowCredentials(true);
-
-        // 🔥 CRITICAL: Max Age (cache preflight response)
-        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
@@ -107,6 +83,7 @@ public class SecurityConfig {
                 .password(passwordEncoder().encode("katasandi"))
                 .roles("ADMIN")
                 .build();
+
         return new InMemoryUserDetailsManager(user);
     }
 
